--- a/Tutorial01/html01/tutorial/ct_about.html
+++ b/Tutorial01/html01/tutorial/ct_about.html
@@ -8,15 +8,16 @@
 
 <body>
     <header>
-        <h1>Curbside Thai</h1>
+        <img src="ct_logo2.png" />
     </header>
     <article>
-        <h2>About Us</h2>
+        <h1>About Us</h1>
+        img src="ct_photo1.png" alt="" />
         <p><strong>Curbside Thai</strong> brings the rich flavor of Thailand to North Carolina. Master Chef Sajja Adulet, with over 35 years of experience at the House of Asia, now offers that same fine dining to the streets of Charlotte with our modern mobile food truck. </p>
         <p>This is not bland vendor food packaged in greasy paper boxes! Sample his acclaimed cuisine at our various mobile locations throughout downtown Charlotte from 11 a.m. to 7 p.m. on Monday through Thursday, and 11 a.m. to 11 p.m. on Friday and Saturday. Taste the difference! If you can't get away from your desk, Curbside Thai will deliver.</p>
         <p>Contact us to cater your next party and experience what <cite>Caroline Traveler</cite> calls <q>the finest Asian food on or off the streets of Charlotte</q>.</p>
     </article> 
     <footer>
-        Curbside Thai 411 Belde Drive, Charlotte NC 28201 704-555-1151
+        Curbside Thai &#8226; 411 Belde Drive, Charlotte NC &nbsp; 28201 &#8226; 704-555-1151
      </footer>
 </body>
