--- a/Tutorial01/html01/tutorial/ct_contact_txt.html
+++ b/Tutorial01/html01/tutorial/ct_contact_txt.html
@@ -24,14 +24,14 @@
    <header class="logo">
       <a href="ct_start.html"><img src="ct_logo2.png" alt="Curbside Thai" /></a>
       <nav>
-          <ul>
-              <li><a href="ct_about.html">About</a></li>
-              <li><a href="ct_locations_txt.html">Locations</a></li>
-              <li><a href="ct_menu_txt.html">Menu</a></li>
-              <li><a href="ct_reviews_txt.html">Reviews</a></li>
-              <li><a href="ct_catering_txt.html">Catering</a></li>
-              <li><a href="ct_contact_txt.html">Contact</a></li>
-          </ul>
+         <ul>
+            <li><a href="ct_about.html">About</a></li>
+            <li><a href="ct_locations_txt.html">Locations</a></li>
+            <li><a href="ct_menu_txt.html">Menu</a></li>
+            <li><a href="ct_reviews_txt.html">Reviews</a></li>
+            <li><a href="ct_catering_txt.html">Catering</a></li>
+            <li><a href="ct_contact_txt.html">Contact</a></li>
+         </ul>
       </nav>
    </header>
    <article>
@@ -45,8 +45,10 @@
          Charlotte NC 28201
       </address>
 
-      <p>Call: (704) 555-1151</p>
-      <p>Email: curbside.thai@example.com</p>
+      <p>Call: <a href="tel:+17045551151">(704) 555-1151</a></p>
+      <p>Email: <a href="mailto:curbside.thai@example.com">
+            curbside.thai@example.com
+         </a></p>
 
    </article>
    <footer>
