--- a/Diane's Run Charity/dr_index.html
+++ b/Diane's Run Charity/dr_index.html
@@ -1,7 +1,8 @@
 <!doctype html>
 <html>
+
 <head>
-<!--
+   <!--
     New Perspectives on HTML5 and CSS3, 7th Edition
     Tutorial 1
     Case Problem 3
@@ -21,9 +22,9 @@
 
 <body>
    <header>
-   	<!-- Header Section -->
+      <!-- Header Section -->
       <nav>
-	<!-- Navigation Section -->
+         <!-- Navigation Section -->
          <ul>
             <li><a href="dr_index.html">Home</a></li>
             <li><a href="dr_info.html">Race Info</a></li>
@@ -33,18 +34,44 @@
    </header>
 
    <section>
-    <!-- 1st Section -->
+      <!-- 1st Section -->
+
+      <h1>>What Your Support Does</h1>
+
+      <p>Every 10 minutes a woman is diagnosed with breast cancer. Her first reaction
+         is fear and confusion. Support is just a phone call or mouse click away. Our
+         free services offer a friendly ear and expert guidance to anyone dealing with
+         this life-threatening illness.</p>
+
+      <p>By running or walking with us, you can ensure
+         that we are there when people need us. Here is how your contribution can
+         help:</p>
+
+      <ul>
+         <li>$15 pays for a headscarf set, boosting the confidence of
+            women who have lost their hair from her breast cancer treatment.</li>
+
+         <li>$50 trains a member of our support network for a
+            year to help improve the care of women with breast cancer.</li>
+
+         <li>$125 covers the cost of counselling sessions to help
+            women cope with the distress of their cancer treatment.</li>
+
+         <li>$250 funds a hospital information station
+            for a year so that people affected by breast cancer have easy
+            access to the latest resources and help.</li>
+      </ul>
    </section>
-   
+
    <section>
       <header>
-    <!-- 2nd Section Header -->
+         <!-- 2nd Section Header -->
       </header>
-    <!-- 2nd Section -->  
-        </section>
- 
+      <!-- 2nd Section -->
+   </section>
+
    <footer>
-    <!-- Footer Section -->       
+      <!-- Footer Section -->
    </footer>
 </body>
 
