--- a/Diane's Run Charity/dr_index.html
+++ b/Diane's Run Charity/dr_index.html
@@ -36,7 +36,7 @@
    <section>
       <!-- 1st Section -->
 
-      <h1>>What Your Support Does</h1>
+      <h1>What Your Support Does</h1>
 
       <p>Every 10 minutes a woman is diagnosed with breast cancer. Her first reaction
          is fear and confusion. Support is just a phone call or mouse click away. Our
@@ -66,12 +66,53 @@
    <section>
       <header>
          <!-- 2nd Section Header -->
+         <img src="dr_photo1.png" />
+         <h1>Diane's Run - September 9, 2017</h1>
+         Join over 2000 athletes in Cheyenne, Wyoming, for <strong>Diane's Run</strong> to raise money for breast cancer
+         awareness and research. The 5K and 10K races
+         are challenging, yet attainable. You can aim for a personal best while taking part to
+         raise money for this important charity. If you can't run, consider walking; joining
+         young and old in the fight by participating in the 1-Mile Walk for Hope.
+
+
+         <h2>How to Join</h2>
+
+         <p>You can guarantee a spot by filling out the entry form and mailing it to dianesrun@example.com.
+            The $35 entry
+            fee is tax deductible and goes directly to
+            important research and women in need. We keep our overhead very low so every dollar
+            counts. More than 75% of the net proceeds fund screening and treatment
+            programs in your communities. We welcome out-of-town visitors. We will
+            help you find <a href="dr_faq.html">accommodations</a> during your visit.</p>
+
+
+         <h2>History</h2>
+
+         <p> Since its inception in 2004, Diane's Run has grown from a purely local event involving
+            100 runners to a signature Wyoming event with more than 2000 participants annually.
+            The event is enormously effective in spreading the message that breast cancer need
+            not be fatal if caught early enough with mammography and breast self-exam.
+            As well as a top-flight athletic event, Diane's Run is an emotionally moving event
+            attracting many first timers and recreational runners. This event provides all of
+            us with the opportunity to spread a hopeful message about breast cancer to our families
+            and our communities.</p>
+
+
+         <h2>Remembering Diane</h2>
+
+         <p>Diane's Run is named in remembrance of Diane Wheaton, mother of 2 and wife
+            of Peter, who passed away in May, 2003. Diane was an outspoken advocate of physical
+            fitness and healthy living. She was an inspiration to all who knew her and continues
+            to be an inspiration to the thousands of runners who have participated in this event.
+
+            We hope you can join us this year and become part of the Diane's Run family.</p>
       </header>
       <!-- 2nd Section -->
    </section>
 
    <footer>
       <!-- Footer Section -->
+      Diane's Run &#9829; 45 Mountain Drve &#9829 Cheyenne, WY 82001
    </footer>
 </body>
 
