--- a/Practice/html02/review/tss_coach.html
+++ b/Practice/html02/review/tss_coach.html
@@ -7,14 +7,15 @@
     Review Assignment
     
     Tri and Succeed Sports
-    Author: 
-    Date:   
+    Author: Lynn Makowski
+    Date:   05/08/2023
 
     Filename: tss_coach.html
    -->
    <meta charset="utf-8" />
    <title>Tri and Succeed Sports Coaches</title>
-
+   <link href="coach_styles.css" rel="stylesheet" />
+   <link href="coach_layout.css" rel="stylesheet" />
 </head>
 
 <body>
@@ -28,7 +29,7 @@
          <li><a href="tss_run.html">Running Class</a></li>
          <li><a href="tss_bike.html">Cycling Class</a></li>
          <li><a href="tss_swim.html">Swimming Class</a></li>
-		 <li><a href="tss_coach.html">Coaches</a></li>
+		   <li><a href="tss_coach.html">Coaches</a></li>
          <li><a href="http://www.active.com/">Active.com</a></li>
          <li><a href="http://www.runnersworld.com/">Runner's World</a></li>
          <li><a href="https://www.endomondo.com/">endomondo.com</a></li>
