--- a/code_skool-main/html03/tutorial/pc_home.html
+++ b/code_skool-main/html03/tutorial/pc_home.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html>
+
 <head>
    <!--
     New Perspectives on HTML5 and CSS3, 7th Edition
@@ -7,15 +8,17 @@
     Tutorial Case
     
     Home Page of Pandaisia Chocolates
-    Author: 
-    Date:   
+    Author: Lynn Makowski
+    Date:   05/19/2023
 
     Filename: pc_home.html
    -->
    <meta charset="utf-8" />
    <meta name="keywords" content="chocolate, chocolatier, cocoa, cacao, desserts" />
    <title>Pandaisia Chocolates</title>
-
+   <link href=”pc_reset.css” rel=”stylesheet” />
+   <link href=”pc_styles1.css” rel=”stylesheet” />
+   <link href=”pc_home.css” rel=”stylesheet” />
 </head>
 
 <body>
@@ -34,10 +37,10 @@
    <section id="leftColumn">
       <p>Pandaisia Chocolates has been creating
          gourmet chocolates and sweets for happy customers since
-         1993. Our hand-dipped truffles, savory chocolates, and 
+         1993. Our hand-dipped truffles, savory chocolates, and
          mouth-watering toffees are made from the finest
          organic cacao. We use only natural ingredients with
-         wildflower honey replacing corn syrup and cream that comes 
+         wildflower honey replacing corn syrup and cream that comes
          fresh from local dairy farms. Chocolate
          is an art: come tour our gallery.</p>
    </section>
@@ -93,4 +96,5 @@
       </section>
    </footer>
 </body>
+
 </html>
