fixed the style import shits

--- a/code_skool-main/html03/tutorial/pc_home.html
+++ b/code_skool-main/html03/tutorial/pc_home.html
@@ -2,9 +2,6 @@
 <html>
 
 <head>
-   <link href=”pc_reset.css” rel=”stylesheet” />
-   <link href=”pc_styles1.css” rel=”stylesheet” />
-   <link href=”pc_home.css” rel=”stylesheet” />
    <!--
     New Perspectives on HTML5 and CSS3, 7th Edition
     Tutorial 3
@@ -18,8 +15,10 @@
    -->
    <meta charset="utf-8" />
    <meta name="keywords" content="chocolate, chocolatier, cocoa, cacao, desserts" />
-   <title>Pandaisia Chocolates</title>
-
+   <title>Pandaisia Cholocates</title>
+   <link href="pc_reset.css" rel="stylesheet" />
+   <link href="pc_styles1.css" rel="stylesheet" />
+   <link href="pc_home.css" rel="stylesheet" />
 </head>
 
 <body>
